@@ -1,3 +1,11 @@
+xmpp4r-simple (0.8.6)
+
+  [ Blaine Cook ]
+  * Catch a rare exception that's thrown when we are disconnecting.
+
+-- Blaine Cook <blaine@obvious.com> Fri, 26 Jan 2007 11:45:23 -0800
+
+
 xmpp4r-simple (0.8.5)
 
   [ Blaine Cook ]
